--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Neon PostgreSQL 数据库连接
-DATABASE_URL="your-connection-string"
-DIRECT_URL="your-connection-string"
+DATABASE_URL='postgresql://neondb_owner:npg_Hfw7xkQG8ObJ@ep-calm-forest-a1spl0ad-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DIRECT_URL="postgresql://neondb_owner:npg_Hfw7xkQG8ObJ@ep-calm-forest-a1spl0ad.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 
 # Pusher 配置
-PUSHER_APP_ID=your-app-id
-PUSHER_KEY=your-pusher-key
-PUSHER_SECRET=your-pusher-secret
-PUSHER_CLUSTER=mt1
+PUSHER_APP_ID="2034244"
+PUSHER_KEY="3341796e278146eea88b"
+PUSHER_SECRET="9809cb4bab6c99299a08"
+PUSHER_CLUSTER="ap3"
 NEXT_PUBLIC_PUSHER_KEY=your-pusher-key
 NEXT_PUBLIC_PUSHER_CLUSTER=mt1
